Add many new tests and update POMs in one lazy bulk commit